--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,13 @@ body {
 
 .arrow {
     position: absolute;
-    top: 100px;
-    right: -50px;
+    top: 125px; /* Ajustează săgeata să fie centrată în raport cu roata */
+    right: -75px; /* Ajustează distanța față de roată */
     width: 0;
     height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 100px solid black;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-left: 50px solid black; /* Săgeata de selecție */
 }
 
 #spin-btn {
